# musicdl

./: .gitignore  README.md  pyproject.toml
src/lumen_dlp/: __init__.py
src/lumen_dlp/application/: __init__.py  download_media.py  download_transcripts.py  fetch.py  inspect.py  list_playlist.py
src/lumen_dlp/domain/: __init__.py  auth.py  enums.py  models.py  output.py
src/lumen_dlp/infrastructure/: __init__.py  archive.py  browser_detect.py  parallel.py  ytdlp_client.py
src/lumen_dlp/presentation/: __init__.py  cli.py  rendering.py
src/musicdl/: __init__.py  cli.py  commands.py  domain.py  parallel.py  rendering.py  ytdlp_client.py
src/musicdl/application/: __init__.py  download_media.py  download_transcripts.py  list_playlist.py
src/musicdl/commands/: __init__.py  download_media.py  download_transcripts.py  list_playlist.py
src/musicdl/domain/: __init__.py  command.py  enums.py  models.py
src/musicdl/infrastructure/: __init__.py  parallel.py  ytdlp_client.py
src/musicdl/presentation/: __init__.py  cli.py  rendering.py
