[project]
name = "lumen-dlp"
version = "0.1.0"
description = "Universal media downloader for YouTube, X, TikTok, Instagram and 1000+ sites. Powered by yt-dlp + ffmpeg."
readme = "README.md"
license = "MIT"
authors = [
    { name = "luis-codex", email = "luisprograming0@gmail.com" }
]
keywords = ["yt-dlp", "ffmpeg", "downloader", "video", "audio", "youtube", "tiktok", "instagram", "twitter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
requires-python = ">=3.14"
dependencies = [
    "rich>=13.9.4",
    "spotdl>=4.5.0",
    "typer>=0.25.1",
    "yt-dlp>=2026.3.17",
]

[project.urls]
Homepage = "https://github.com/luis-codex/lumen-dlp"
Repository = "https://github.com/luis-codex/lumen-dlp"
Issues = "https://github.com/luis-codex/lumen-dlp/issues"

[project.scripts]
lumen-dlp = "lumen_dlp:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
